app/src/main/java/com/example/app/errors/ExceptionMessage.java
package com.example.app.errors;

public class ExceptionMessage {
    public static final String USER_NOT_FOUND = "User with %s email not found";
    public static final String EMAIl_IS_TAKEN = "Email %s is already taken";

}
